--- a/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_PW_SO4_Cl_202404-202412.Rmd
+++ b/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_PW_SO4_Cl_202404-202412.Rmd
@@ -1151,9 +1151,9 @@ viz_cl_plot <- ggplot(data_plotting, aes(x = row_num, y = Cl_ppm, fill = Zone)) 
   geom_bar(stat = "identity", position = position_dodge2(preserve = "single")) +
   facet_wrap(~ Zone, scales="free") +
   scale_fill_manual(values = c(
-    "C" = "#20063B",
-    "FW" = "#FFBC42",
-    "SW" = "#25ABE6"
+    "C" = "springgreen2",
+    "FW" = "cyan2",
+    "SW" = "violetred2"
   )) +
   theme_classic() +
   theme(axis.text.x = element_blank()) +
@@ -1165,9 +1165,9 @@ viz_so4_plot <-  ggplot(data_plotting, aes(x = row_num, y = SO4_ppm, fill = Zone
   geom_bar(stat = "identity", position = position_dodge2(preserve = "single")) +
   facet_wrap(~ Zone, scales="free") +
   scale_fill_manual(values = c(
-    "C" = "#20063B",
-    "FW" = "#FFBC42",
-    "SW" = "#25ABE6"
+    "C" = "springgreen2",
+    "FW" = "cyan2",
+    "SW" = "violetred2"
   )) +
   theme_classic() +
   theme(axis.text.x = element_blank()) +
