--- a/processing_scripts/Sulfide/Microplate_Sulfide_TEMPEST_QAQC_Sept_combine_plates.Rmd
+++ b/processing_scripts/Sulfide/Microplate_Sulfide_TEMPEST_QAQC_Sept_combine_plates.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Synoptic CB: Porewater Sulfide"
-author: "September 2025 All Plates"
+title: "TEMPEST: Porewater Sulfide"
+author: "2025 All Plates"
 date: "`r Sys.Date()`"
 output: 
   pdf_document:
@@ -10,32 +10,39 @@ geometry: "left=2cm,right=2cm,top=1cm,bottom=2cm"
 output_dir: "To Be Reviewed/PDF"
 ---
 
+##Add Required Packages
+```{r packages, include=FALSE}
+
+#Packages that are required 
+lapply(c(
+  "dplyr", "ggplot2", "ggpubr", "stringr",
+  "purrr", "tidyverse", "here", "broom", "tibble",
+  "googledrive", "googlesheets4", "data.table", 
+  "matrixStats", "gridExtra", "grid", "readxl"), 
+  library, character.only = TRUE)
+
+#Packages for loading metadata
+require(pacman)
+pacman::p_load(janitor, # useful for simplifying column names
+               googlesheets4, # read_sheet 
+               googledrive, # drive_ functions
+               plotrix,
+               here) 
+
+common_tz = "Etc/GMT+5"
+
+Sys.setenv(TZ = "America/New_York")
+
+```
+
+
 ##Run Notes
 ```{r}
-# Some sample IDs are missing from metadata.
-# [1] "SWH_202509_WC_LYSC_45CM" NA                        "GCW_202509_TR_LYSC_45CM"
+Sample_Year <- "2025"
+Run_notes = "Some sample IDs are missing from metadata: TMP_SW_PW_F4_20250509_15CM"
 
 ```
 
-
-##Read in packages
-```{r packages, include = FALSE}
-#packages
-library(ggplot2)
-library(dplyr)
-library(data.table)
-library(matrixStats)
-library(gridExtra)
-library(ggpubr)
-library(grid)
-library(stringr)
-library(plater)
-library(raster)
-library(tidyverse)
-library(readxl)
-library(dplyr)
-
-```
 
 ##Read in raw data
 ```{r Read in raw data, include = FALSE}
@@ -71,7 +78,7 @@ Sample_data <- all_data %>%
 ```{r Read in and Fix Sample IDs, include = FALSE}
 
 #Read in Sample IDs
-SampleIDs <- read_excel("Raw Data/COMPASS_Sept2025_SampleIDs.xlsx")
+SampleIDs <- read_excel("Raw Data/TEMPEST_2025_SampleIDs.xlsx")
 SampleIDs$Number <- as.character(SampleIDs$Number)
 names(SampleIDs) <- tools::toTitleCase(names(SampleIDs))
 
@@ -85,30 +92,21 @@ Sample_data_IDs <- Sample_data %>%
   left_join(SampleIDs, by = c("IDs" = "Number"))
 
 ##Make full sample IDs
-##Depths for SW samples should be 0 
-Sample_data_IDs$Depth <-  ifelse((Sample_data_IDs$Zone == "SW"), "0cm", Sample_data_IDs$Depth)
-
-#Create IDs from what was collected for comparison later
 Sample_data_IDs <- Sample_data_IDs %>%
-  mutate(Sample_ID = paste(Site, Date, Zone, Replicate, Depth, sep = "_"))
-
-#Change the SW lines because they don't have lysimeters or a depth  
-Sample_data_IDs <- Sample_data_IDs %>%
-  mutate(
-    Sample_ID = if_else(
-      Zone == "SW",
-      # Modify the string:
-      Sample_ID %>%
-        str_replace("_LysA", "_A") %>%                    # Replace "_LysA" with "_A"
-        str_replace("_LysB", "_B") %>%                    # Replace "_LysB" with "_B"
-        str_replace("_LysC", "_C") %>%                    # Replace "_LysC" with "_C"
-        str_replace("_0cm$", ""),                          # Remove trailing "_0cm"
-      Sample_ID  # else keep original
-    )
-  )
+  mutate(Sample_ID = paste(Project,
+                          Zone, 
+                          Source, 
+                          Plot,
+                          Date, 
+                          Depth, 
+                          sep = "_"))
 
 ##Capitalize all sample IDs
 Sample_data_IDs$Sample_ID <- toupper(Sample_data_IDs$Sample_ID)
+
+##Remove NAs
+Sample_data_IDs <- Sample_data_IDs %>%  
+  filter(!str_detect(Sample_ID, "NA"))
   
 ```
 
@@ -172,71 +170,66 @@ print(BDL_not_fixed)
 
 ```
 
-##Pull in Metadata
-```{r Pull in Metadata, include = FALSE}
+## Pull in active porewater tracking inventory sheet from Google Drive: 
+```{r rest of metadata, include=FALSE}
 
-Raw_Metadata = "Raw Data/COMPASS_SynopticCB_PW_SampleLog_2025.csv"
+#Run these to pull the TEMPEST porewater metadata into GitHub if not already there
+# inventory_directory <- "https://docs.google.com/spreadsheets/d/1sFWq-WKhemPzbOFInqhCu_Lx0lsO6a_Z/edit#gid=496164093"
+# 
+# drive_download(inventory_directory, overwrite = TRUE)
 
-#read in the raw metadata file 
-raw_metadata <- read.csv(Raw_Metadata)
+sheet_names <- excel_sheets("TEMPEST_PorewaterInventory_May2022_Present.xlsx")
+sheet_names
 
-#make a new columns in the metadata with important info:
-metadata <- raw_metadata %>%
-  mutate(Depth = paste0(Depth_cm, "cm")) %>%
-  mutate(LysID = paste0("Lys", Lysimeter)) %>%
-  mutate(YearMonth = sprintf("%d%02d", Year, Month))  %>%
-  mutate(Zone = case_when(
-    `Transect.Location` == "Transition" ~ "TR",
-    `Transect.Location` == "Wetland"    ~ "WC",
-    `Transect.Location` == "Upland"     ~ "UP",   
-    `Transect.Location` == "Surface Water" ~ "SW",
-    TRUE                 ~ `Transect.Location`    # keep original value if no match
-  ))
+raw_metadata_lys <- read_excel("TEMPEST_PorewaterInventory_May2022_Present.xlsx", sheet = "Porewater - Individual", skip = 3)
 
-#Create IDs from what was collected for comparison later
-metadata <- metadata %>%
-  mutate(H2S_ID = ifelse(SO4 == "x",
-                                     paste(Site,
-                                           YearMonth,
-                                           Zone,
-                                           LysID,
-                                           Depth,
-                                           sep = "_"),
-                                     NA),  )
+```
 
-#Change the SW lines because they don't have lysimeters or a depth  
-metadata <- metadata %>%
-  mutate(
-    H2S_ID = if_else(
-      Zone == "SW",
-      # Modify the string:
-      H2S_ID %>%
-        str_replace("_LysA", "_A") %>%                    # Replace "_LysA" with "_A"
-        str_replace("_LysB", "_B") %>%                    # Replace "_LysB" with "_B"
-        str_replace("_LysC", "_C") %>%                    # Replace "_LysC" with "_C"
-        str_replace("_0cm$", ""),                          # Remove trailing "_0cm"
-      H2S_ID  # else keep original
-    )
-  )
 
-#Take out the columns and rows that are not relevant
-sulfide_metadata <- metadata %>%
-  dplyr::select(H2S_ID, Year, Month, Day, YearMonth, Site, Zone, Lysimeter, LysID, Depth_cm, 
-         Depth, Time..24hr., Time.Zone_EDT.EST, Field.Notes, ) %>%        
-  # only keep specific columns
-  filter(!is.na(H2S_ID) & H2S_ID != "")  # remove missing/blank Cl_SO4_ID rows
+##Create similar sample IDs to match with run samples 
+```{r pull in metadata for later, include=FALSE}
 
-head(sulfide_metadata)
+#select SO4/Cl samples 
+raw_metadata_lys <- subset(raw_metadata_lys, Analyte == "SO4/Cl/H2S")
+
+#select samples from correct year
+raw_metadata_lys_year <- raw_metadata_lys %>%  
+  filter(str_detect(Sample_ID, Sample_Year))
+
+#separate samples into columns
+raw_metadata_lys_year <- raw_metadata_lys_year %>%
+  separate(
+    col = Sample_ID,
+    sep = "_",
+    into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date"),
+    remove = FALSE)
+
+raw_metadata_lys_combined <- raw_metadata_lys_year %>%
+  select("Sample_ID", "Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Volume_mL", "Notes")
+
+
+#create IDs from what was collected for comparison later
+raw_metadata_lys_combined <- raw_metadata_lys_combined %>%
+  mutate(H2S_ID = paste(Project,
+                          Zone,
+                          Source, 
+                          Grid,
+                          Collection_Date, 
+                          Depth, 
+                          sep = "_"))
+
+raw_metadata_lys_combined$H2S_ID <- toupper(raw_metadata_lys_combined$H2S_ID)
+
+#remove old ID's
+raw_metadata_lys_combined$Sample_ID <- NULL
+
+sulfide_metadata = raw_metadata_lys_combined
 
 ```
 
 
 ##Check to see if samples run match metadata & merge info
 ```{r Check to see if samples run match metadata & merge info, echo = FALSE}
-
-#check to see if all samples are present in the metadata 
-Sample_data_nodups$Sample_ID <- toupper(Sample_data_nodups$Sample_ID)
-sulfide_metadata$H2S_ID <- toupper(sulfide_metadata$H2S_ID)
 
 all_present <- all(Sample_data_nodups$Sample_ID %in% sulfide_metadata$H2S_ID)
 
@@ -255,30 +248,22 @@ if (all_present) {
 # ##Export missing IDs to csv
 # write.csv(missing_ids, "20250529_COMPASS_H2S_missing_IDs.csv")
 
-##Remove Lys from Replicate Column
-Sample_data_nodups <- Sample_data_nodups %>%
-  mutate(Replicate = gsub("Lys", "", as.character(Replicate)))%>%
-  mutate(Replicate = gsub("lys", "", as.character(Replicate)))
-
-##Remove cm units from Depth
-Sample_data_nodups$Depth_cm <- gsub("cm", "", Sample_data_nodups$Depth)
-
 ##Select only necessary columns
 all_data_selected <- Sample_data_nodups %>%
-  dplyr::select(-c("ID_conc", "Depth"))
-
-all_data_selected$Depth_cm <- as.integer(all_data_selected$Depth_cm)
+  dplyr::select(-c("ID_conc"))
+all_data_selected$Date <- as.character(all_data_selected$Date)
 
 ##Select only necessary columns
-sulfide_metadata_selected <- sulfide_metadata %>%
-  dplyr::select(H2S_ID, Year, Month, Day, Depth_cm, Lysimeter, Time..24hr., Time.Zone_EDT.EST,  Field.Notes) 
+sulfide_metadata_selected <- sulfide_metadata
 
 #merge metadata with sample run data 
 merged_data <- all_data_selected %>%
-  left_join(sulfide_metadata_selected, by = c("Sample_ID" = "H2S_ID", "Replicate" = "Lysimeter", "Depth_cm"))
+  left_join(sulfide_metadata_selected, by = c("Sample_ID" = "H2S_ID", "Plot" = "Grid", "Date" = "Collection_Date","Project", "Zone", "Source", "Analyte", "Depth"))
 
 
 ```
+
+
 
 
 ## Visualize Data by Plot   
@@ -288,29 +273,23 @@ merged_data <- all_data_selected %>%
 data_plotting <- merged_data
 
 #Order by Zone from Upland to Surface Water
-data_plotting$Zone = factor(data_plotting$Zone, levels = c("UP",  "SWAMP","TR", "WC", "SW"))
+data_plotting$Zone = factor(data_plotting$Zone, levels = c("C", "FW", "SW"))
 data_plotting <- data_plotting[order(data_plotting$Zone), ]
-
-#Order by Site from SWH, GCW, MSM, GWI order, which is oligohaline to polyhaline
-data_plotting$Site = factor(data_plotting$Site, levels = c("SWH", "GCW", "MSM", "GWI"))
-data_plotting <- data_plotting[order(data_plotting$Site), ]
 
 #group the data for plotting
 data_plotting <- data_plotting %>%
-  group_by(Site) %>%
   mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
   ungroup()
 
 #Plot data and change colors based on Zone:
 viz_H2S_plot <- ggplot(data_plotting, aes(x = row_num, y = H2S_mean, fill = Zone)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "single")) +
-  facet_grid(~ Site, scales="free") +
+  facet_wrap(~ Zone, scales="free_x") +
   scale_fill_manual(values = c(
-    "UP" = "#20063B",
-    "SWAMP" = "darkgrey",
-    "TR" = "#FFBC42",
-    "WC" = "#419973",
-    "SW" = "#25ABE6"
+    "C" = "springgreen2",
+    "FW" = "cyan2",
+    "SW" = "violetred2", 
+    "ESTUARY" = "grey"
   )) +
   theme_classic() +
   theme(axis.text.x = element_blank()) +
@@ -325,7 +304,6 @@ viz_H2S_plot
 
 ```
 
-
 ##Export Combined Data
 ```{r Export Combined Data, include = FALSE}
 
@@ -333,25 +311,21 @@ viz_H2S_plot
 #Add any necessary identifiers to the samples  ### VERY IMPORTANT AND STANDARD FOR PROJECT ####
   #example read in sample IDs list and merge 
   #create required ID columns in R, etc. 
-final_data <- merged_data %>% 
-  mutate(
-    Project = "COMPASS: Synoptic",   # new column with same value on every row
-    Region = "CB", 
-    Analysis_rundate = "20250925" #need to make it so this comes out in plate processed file
-  ) 
 
-colnames(final_data)
+colnames(merged_data)
 
-final_data <- final_data %>%
+
+final_data <- merged_data %>%
   rename(
-    Time = Time..24hr.,
-    Time_Zone = Time.Zone_EDT.EST,
-    Field_notes = Field.Notes
+    Field_notes = Notes,
+    Depth_cm = Depth, 
+    Grid = Plot, 
+    Collection_Date = Date
     # add more rename pairs as needed
   ) %>%
-  dplyr::select(
-    Project, Region, Site, Zone, Replicate, Depth_cm, 
-         Sample_ID, Year, Month, Day, Time, Time_Zone,
+  select(
+    Project, Sample_ID, Zone, Grid, Depth_cm,
+         Source, Volume_mL, Collection_Date, 
          H2S_mean, H2S_sd, H2S_cv, H2S_Conc_flag, H2S_cv_flag, H2S_QAQC_flag, Dilution, 
          Analysis_rundate, Field_notes
         # list columns in the order you want them
@@ -360,16 +334,16 @@ final_data <- final_data %>%
 head(final_data)
 
 #Write out final data frame 
-write.csv(final_data, "COMPASS_H2S_20250925_Plate1-8_Combined.csv")
+write.csv(final_data, "TEMPEST_H2S_2025_Plate1-8_Combined.csv")
 
 #Write out samples that still have high CVs
-write.csv(HighCV, "COMPASS_H2S_20250925_Plate1-8_HighCVs.csv")
+write.csv(HighCV, "TEMPEST_H2S_2025_Plate1-8_HighCVs.csv")
 
 #Write out ADL samples
-write.csv(ADL_not_fixed, "COMPASS_H2S_20250925_Plate1-8_ADL.csv")
+write.csv(ADL_not_fixed, "TEMPEST_H2S_2025_Plate1-8_ADL.csv")
 
 #Write out BDL samples
-write.csv(BDL_not_fixed, "COMPASS_H2S_20250925_Plate1-8_BDL.csv")
+write.csv(BDL_not_fixed, "TEMPEST_H2S_2025_Plate1-8_BDL.csv")
 
 
 ```
