QAQC'd TMP 2025 data and collated 2024-2025 data

--- a/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_PW_SO4_Cl_202406_72-136.Rmd
+++ b/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_PW_SO4_Cl_202406_72-136.Rmd
@@ -1236,7 +1236,7 @@ final_data <- final_data %>%
   select(
     Project, Sample_ID, Zone, Grid, Depth_cm, Event_Time, Time_of_day, 
          Source, Volume_mL, Collection_Date, 
-         SO4_Conc_mM, SO4_Conc_flag, SO4_QAQC_flag, Cl_Conc_mM, Cl_Conc_flag, Cl_QAQC_flag, salinity,
+         SO4_ppm, SO4_Conc_mM, SO4_Conc_flag, SO4_QAQC_flag, Cl_ppm, Cl_Conc_mM, Cl_Conc_flag, Cl_QAQC_flag, salinity,
          Analysis_rundate,  Run_notes, Field_notes
         # list columns in the order you want them
   )
